--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,16 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+
+      <%= render 'shared/messages' %>
+
+      <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
