correct the acct_no

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td>Account ID</td>
-    <td><%= @account.acct_id %></td>
+    <td><%= @account.acct_no %></td>
   </tr>
   <tr>
     <td>Type</td>
