--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,11 +1,7 @@
 <table class="table">
   <tr>
     <td>Branch ID</td>
-    <td><%= @branch.code %></td>
-  </tr>
-  <tr>
-    <td>Name</td>
-    <td><%= @branch.name %></td>
+    <td><%= @branch.branch_no %></td>
   </tr>
   <tr>
     <td>Address</td>
