--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <tr>
     <td>Customer ID</td>
-    <td><%= @customer.code %></td>
+    <td><%= @customer.ssn %></td>
   </tr>
   <tr>
     <td>Name</td>
