--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @bank, url: {action: "create"}, html: {class: "form", method: "post"} do |f| %>
+<%= form_for @customer, url: {action: "create"}, html: {class: "form", method: "post"} do |f| %>
   <%= f.label :name, "Name: " %>
   <%= f.text_field :name %>
   <p></p>
