--- a/app/views/shared/_show_flash.html.erb
+++ b/app/views/shared/_show_flash.html.erb
@@ -1,7 +1,7 @@
 <!-- flash messages -->
-<%= flash.each do |key, value| %>
+<% flash.each do |key, value| %>
   <div class="alert alert-dismissable alert-<%= key %>">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-    value
+    <%= value %>
   </div>
 <% end %>  
