add new links to index views

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new account", new_account_path %>
 <table class="table">
   <tr>
     <td>Account ID</td>
@@ -16,3 +17,4 @@
     </tr>
   <% end %>
 </table>
+<%= link_to "Add new account", new_account_path %>
