--- a/app/views/banks/show.html.erb
+++ b/app/views/banks/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new bank", new_bank_path %>
 <table class="table">
   <tr>
     <td>Bank ID</td>
@@ -22,3 +23,4 @@
     <tr><%= link_to brnch.branch_no, branch_path(brnch.branch_no) %></tr>
   <% end %>
 </table>
+<%= link_to "Add new bank", new_bank_path %>
