--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new branch", new_branch_path %>
 <table class="table">
   <tr>
     <td>Branch ID</td>
@@ -12,3 +13,4 @@
   </tr>
   <% end %>
 </table>
+<%= link_to "Add new branch", new_branch_path %>
