--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new customer", new_customer_path %>
 <table class="table">
   <tr>
     <td>Customer ID</td>
@@ -16,3 +17,4 @@
   </tr>
   <% end %>
 </table>
+<%= link_to "Add new customer", new_customer_path %>
