--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new loan", new_loan_path %>
 <table class="table">
   <tr>
     <td>Loan ID</td>
@@ -16,3 +17,4 @@
     </tr>
   <% end %>
 </table>
+<%= link_to "Add new loan", new_loan_path %>
