--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
 
     <ul class="nav navbar-nav">
       <% if !signed_in? %>
-        <div id="login">
+        <div id="login" style="background-color: #555555;">
           <p id="open">Login</p>
             <%= render 'shared/sign_in_form' %>
         </div>
