--- a/app/views/banks/index.html.erb
+++ b/app/views/banks/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Add new bank", new_bank_path %>
 <table class="table">
   <tr>
     <td>Bank ID</td>
@@ -14,3 +15,4 @@
   </tr>
   <% end %>
 </table>
+<%= link_to "Add new bank", new_bank_path %>
