add report taking links to index templates

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Make a report.", accounts_report_path %>
+<p></p>
 <%= link_to "Add new account", new_account_path %>
 <table class="table">
   <tr>
