--- a/app/views/banks/index.html.erb
+++ b/app/views/banks/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Make a report.", banks_report_path %>
+<p></p>
 <%= link_to "Add new bank", new_bank_path %>
 <table class="table">
   <tr>
