--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Make a report.", branches_report_path %>
+<p></p>
 <%= link_to "Add new branch", new_branch_path %>
 <table class="table">
   <tr>
