--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Make a report.", customers_report_path %>
+<p></p>
 <%= link_to "Add new customer", new_customer_path %>
 <table class="table">
   <tr>
