--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Make a report.", loans_report_path %>
+<p></p>
 <%= link_to "Add new loan", new_loan_path %>
 <table class="table">
   <tr>
