--- a/app/views/banks/new.html.erb
+++ b/app/views/banks/new.html.erb
@@ -5,5 +5,5 @@
   <%= f.label :address, "Address: " %>
   <%= f.text_field :address %>
   <p></p>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", {class: 'btn btn-primary', id: 'button'} %>
 <% end %>
