--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -5,5 +5,5 @@
   <%= f.label :bank_id, "Bank ID: " %>
   <%= f.text_field :bank_id %>
   <p></p>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", {class: 'btn btn-primary', id: 'button'} %>
 <% end %>
