--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -8,5 +8,5 @@
   <%= f.label :phone, "Phone: " %>
   <%= f.text_field :phone %>
   <p></p>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", {class: 'btn btn-primary', id: 'button'} %>
 <% end %>
