--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -11,5 +11,5 @@
   <%= f.label :branch_id, "Branch ID: " %>
   <%= f.text_field :branch_id %>
   <p></p>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", {class: 'btn btn-primary', id: 'button'} %>
 <% end %>
