add queries to table

--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -28,4 +28,8 @@ Where do you want to go?
     <td><%= link_to "Loans", loans_path %></td>
     <td><%= link_to "Add new loan", new_loan_path %></td>
   </tr>
+  <tr>
+    <td><%= link_to "Queries", queries_path %></td>
+    <td><%= link_to "Add new query", new_query_path %></td>
+  </tr>
 </table>
