--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @query, url: {aciton: "create"}, html: {class: "form", method: "post"} do |f| %>
+<%= form_for @query, url: {action: "create"}, html: {class: "form", method: "post"} do |f| %>
   <%= f.label :query_string, "Query: " %>
   <%= f.text_area :query_string %>
   <p></p>
